Add the optional modules to test runners, so we make sure that Lucene is fully tested. At runtime, the dependencies can be left out, but for testing we want to make sure that they are available